--- a/01-spring /01-개념.md
+++ b/01-spring /01-개념.md
@@ -68,7 +68,6 @@ DI : 3번 참조
 
 
 
-
 프레임워크
 -------
 
@@ -96,3 +95,48 @@ DI : 3번 참조
 - 제어의 역전이 가능하냐 불가능하냐
 - 프레임워크 = excel프로그램 자체
 - 라이브러리 = 도형삽입, 메크로, 텍스트 정렬들의 부가기능
+
+
+
+
+DTO,DAO,VO
+----------
+
+### DAO(Data Access Object)
+
+- DB의 데이터에 접근하기 위한 객체
+- mvc 패턴의 model단의 일을 처리.
+
+### DTO(Data Transter Object)
+
+- 계층간의 데이터 교환을 위한 객체(Bean)을 의미
+- DTO는 로직을 가지지 않는 데이터 객체
+- getter/setter 메서드만 가진 클래스
+
+### VO(Value Object)
+
+- Read-Only 속성 오브젝트
+- 값 타입을 표현하기 위한 클래스
+- getter만 존재.
+
+### DTO vs VO
+
+- DTO는 가변의 성격을 가진 클래스, 데이터 전송을 위해 존재
+- VO는 불변의 성격을 가진 클래스 getter만 존재
+
+
+
+
+
+어노테이션
+-------
+
+## @autowired
+
+- 의존성 주입을 위한 애너테이션
+- 주입하려고 하는 객체의 타입이 일치한지를 찾고 객체를 자동 주입.
+- 속성명이 일치하는 bean을 컨테이너(프로젝트)에서 검색.
+
+## @inject
+
+- autowired와 동일하게 작동하지만 순서는 다르다.
