--- a/01-spring /05-세션과 쿠키.md
+++ b/01-spring /05-세션과 쿠키.md
@@ -14,3 +14,9 @@
     기존 연결 정보를 저장 후 view -> 보안에는 매우 취약
     
 - 세션 : 쿠키와 동일하지만 생성되는곳이 웹 서버
+
+쿠키 다루기
+
+- 클라이언트의 요청시 가져온 쿠키 정보는 request 객체의 getCookies 메서드로 가져올수 있기 때문에 JSP, Servlet 어디서든 얻을수 있음.
+- 새로 만들거나 수정한 쿠키 객체는 전달시 어떠한 방식도 관계 없음.
+- 클라이언트에게 최종 응답을 던지는 객체인 response는 쿠키를 add 할수 있는 메서드가 준비되어 있음. (주의 사항 : 생성할때, 기존 쿠키값 변경시 유효시간은 0으로 설정해 쿠키를 만료 시킨 후 다시 reponse 객체에 담아야 한다.)
