--- a/03-정처기 /02-개념.md
+++ b/03-정처기 /02-개념.md
@@ -16,3 +16,30 @@ OSI 계층 7(애플리케이션 계층)의 주요 특성 및 기능은 다음과
 방화벽 및 보안: 애플리케이션 계층 방화벽 및 보안 메커니즘을 레이어 7에 구현하여 애플리케이션 콘텐츠 및 동작을 기반으로 트래픽을 검사하고 필터링할 수 있습니다.
 로드 밸런싱: 레이어 7 로드 밸런싱 솔루션은 URL 경로나 쿠키와 같은 애플리케이션별 데이터를 기반으로 네트워크 트래픽을 분산하여 애플리케이션 성능을 최적화합니다.
 본질적으로 계층 7은 애플리케이션 및 최종 사용자와 직접적으로 관련된 상호 작용 및 서비스에 중점을 둡니다. 이는 네트워크를 통해 다양한 소프트웨어 애플리케이션 간의 통신을 활성화하는 데 중요한 역할을 하며 애플리케이션이 효과적으로 이해하고 활용할 수 있는 방식으로 데이터가 표시, 교환 및 보호되도록 보장합니다.
+
+<br/>
+<br/>
+<br/>
+
+해시(Hash)
+===
+
+해시(Hash)는 일련의 데이터를 고정된 크기의 값으로 변환하는 데 사용되는 알고리즘 또는 함수입니다. 해시 함수는 입력 데이터를 출력 값으로 매핑하는 역할을 수행하며, 이 출력 값은 일반적으로 고정된 길이의 이진 숫자 또는 해시 코드로 표현됩니다. 해시 함수는 다음과 같은 주요 특징을 가집니다:
+
+고유한 출력: 동일한 입력에 대해서는 항상 동일한 해시 코드가 생성됩니다. 이는 데이터의 무결성을 검증하거나 데이터를 고유하게 식별하는 데 사용됩니다.
+
+고정된 출력 크기: 해시 함수는 항상 고정된 크기의 출력 값을 생성합니다. 예를 들어, SHA-256 해시 함수는 256비트(32바이트)의 해시 코드를 생성합니다.
+
+효율성: 좋은 해시 함수는 입력 데이터의 작은 변경에도 출력 값이 크게 변경되어야 하며, 계산이 빠르고 효율적이어야 합니다.
+
+해시 함수는 다양한 응용 분야에서 사용됩니다:
+
+보안: 비밀번호 저장, 디지털 서명, 메시지 인증 등에서 사용됩니다. 해시 함수는 입력 데이터의 보안 해시를 생성하여 데이터 무결성을 검증하거나 암호화된 데이터를 보호하는 데 사용됩니다.
+
+데이터베이스: 해시 테이블과 같은 데이터 구조에서 키를 해시 코드로 변환하여 데이터 검색 및 저장을 향상시키는 데 사용됩니다.
+
+암호화: 해시 함수는 패스워드와 같은 민감한 데이터를 안전하게 저장하는 데 사용됩니다. 사용자의 패스워드를 저장하지 않고 패스워드의 해시 값을 저장하여 보안을 강화합니다.
+
+데이터 검색: 데이터 검색을 빠르게 수행하기 위해 데이터의 해시 값을 사용하는 데 사용됩니다.
+
+주요 해시 함수 중 일부에는 MD5, SHA-1, SHA-256, SHA-3, bcrypt 등이 있습니다. 다양한 해시 함수가 있으며, 사용 목적에 따라 적절한 해시 함수를 선택해야 합니다.
